--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "react-spring": "^9.7.4",
+    "react-spring-3d-carousel": "^1.3.4",
     "react-type-animation": "^3.2.0",
     "react-typing-effect": "^2.0.5"
   },
